--- a/reynolds_number_calculator.ipynb
+++ b/reynolds_number_calculator.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbCuzq1SXPgP/97GtaU3DJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,20 +48,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1b54b171-947c-4c0d-f662-6969cc96ccf5"
+        "outputId": "b8e17362-5e4a-452a-a6e2-dc81df9dd246"
       },
-      "execution_count": 10,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Insert fluid density, kg/m3: 1.25\n",
-            "Insert fluid velocity, m/s: 30\n",
-            "Insert characteristic length, m: 0.1\n",
-            "Insert fluid viscosity, Pa.s: 0.003\n",
-            "Reynolds number is: 1250.0\n",
-            "The flow is laminar\n"
+            "Insert fluid density, kg/m3: 1000\n",
+            "Insert fluid velocity, m/s: 40\n",
+            "Insert characteristic length, m: 0.6\n",
+            "Insert fluid viscosity, Pa.s: 0.004\n",
+            "Reynolds number is: 6000000.0\n",
+            "The flow is turbulent\n"
           ]
         }
       ]
